Add perfects walls and playtime to profile